# shared-services

./: LICENSE  README.md  pyproject.toml
services/: service.py
